pkg/gox/testdata/errors/qualified_nested_selector.gox
package demo

func View() any {
	return <foo.bar.Baz />
}
